--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ actix-multipart = "0.6"
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-uuid = { version = "1.0", features = ["v4"] }
+uuid = { version = "1.0", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 image = "0.24"
 webp = "0.2"
@@ -18,3 +18,6 @@ log = "0.4"
 anyhow = "1.0"
 futures = "0.3"
 futures-util = "0.3"
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
+serde_with = "3.14.0"
+dotenv = "0.15.0"
