--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ futures-util = "0.3"
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
 serde_with = "3.14.0"
 dotenv = "0.15.0"
+imageproc = "0.25.0"
+actix-cors = "0.6"
+http = "0.2"
