--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,6 @@ dotenv = "0.15.0"
 imageproc = "0.25.0"
 actix-cors = "0.6"
 http = "0.2"
+rusoto_core = "0.48"
+rusoto_s3 = "0.48"
+rusoto_credential = "0.48"
