--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,6 @@ http = "0.2"
 rusoto_core = "0.48"
 rusoto_s3 = "0.48"
 rusoto_credential = "0.48"
+jsonwebtoken = "9.3.1"
+reqwest = { version = "0.11", features = ["json"] }
+base64 = "0.21"
