--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,6 @@ rusoto_credential = "0.48"
 jsonwebtoken = "9.3.1"
 reqwest = { version = "0.11", features = ["json"] }
 base64 = "0.21"
+h3ron = "0.17"
+geo-types = "0.7"
+rayon = "1.8"
